# Advent-of-code

./: .gitignore  README.md  go.mod  justfile
cmd/2023/day_1/: main.go
cmd/2023/day_10/: main.go
cmd/2023/day_11/: main.go
cmd/2023/day_13/: main.go
cmd/2023/day_14/: main.go
cmd/2023/day_15/: main.go
cmd/2023/day_16/: main.go
cmd/2023/day_18/: main.go
cmd/2023/day_19/: main.go
cmd/2023/day_2/: main.go
cmd/2023/day_3/: main.go
cmd/2023/day_4/: main.go
cmd/2023/day_5/: main.go
cmd/2023/day_6/: main.go
cmd/2023/day_7/: main.go
cmd/2023/day_8/: main.go
cmd/2023/day_9/: main.go
cmd/2024/day_1/: main.go
cmd/2024/day_10/: main.go
cmd/2024/day_11/: main.go
cmd/2024/day_12/: main.go
cmd/2024/day_13/: main.go
cmd/2024/day_14/: main.go
cmd/2024/day_15/: main.go
cmd/2024/day_16/: main.go
cmd/2024/day_17/: main.go
cmd/2024/day_18/: main.go
cmd/2024/day_19/: main.go
cmd/2024/day_2/: main.go
cmd/2024/day_3/: main.go
cmd/2024/day_4/: main.go
cmd/2024/day_5/: main.go
cmd/2024/day_6/: main.go
cmd/utils/: directedGraph.go  utils.go
rust/: Cargo.toml
rust/2025/day_1/: Cargo.toml
rust/2025/day_1/benches/: bench.rs
rust/2025/day_1/src/: lib.rs  main.rs
rust/2025/day_10/: Cargo.toml
rust/2025/day_10/benches/: bench.rs
rust/2025/day_10/src/: lib.rs  main.rs
rust/2026/day_1/: Cargo.toml
rust/2026/day_1/src/: main.rs
rust/template/: Cargo.toml.tmpl  main.rs
rust/template/benches/: bench.rs
rust/template/src/: lib.rs  main.rs
rust/utils/: Cargo.toml
rust/utils/src/: lib.rs
template/: Main.java  main.go
(+4 files in other folders)
