[workspace]
resolver = "2"
members = [
    "utils",
    "2025/day_1",
    "2025/day_10",
    # AOC_MEMBERS_MARKER (do not remove — `just new-day-rs` inserts entries above this line)
]
exclude = ["template"]

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
divan = "0.1"
