[package]
name = "aoc-2025-day-10"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "aoc-2025-day-10"
path = "src/main.rs"

[[bench]]
name = "bench"
harness = false

[dependencies]
aoc-utils = { path = "../../utils" }

[dev-dependencies]
divan = { workspace = true }
